src/o.scss
html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small,
strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label,
legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside,
figure, footer, header, hgroup, menu, nav, section, time, mark, audio,
video {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    font-size: 100%;
    font-weight: normal;
    vertical-align: baseline;
    background: transparent;
		line-height: 1em;
		box-sizing: border-box;
}



// general

html {
	-webkit-text-size-adjust: 100%;
	overflow-y: scroll;
}

body {
	font-family: 'Theinhardt', 'Arial', sans-serif;
	font-size: 9pt;
	letter-spacing: .03em;

	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.flex {
	display: flex;
}

.s {
	flex-grow: 1;
	-webkit-flex-grow: 1;

	width: 25%;
}

.m {
	width: 70%;
}

.l {
	width: 95%;
}

.row {
	margin-bottom: 5px;
}

figure img {
	display: block;
	margin: 0 auto;
	
	cursor: pointer;
	
	margin: 0 auto;
	
	width: 35%;
	height: auto;
	
	&.landscape {
		width: 55%;
	}
}


// footer
footer {
	margin: 0 0 15px 30px;
}





// typography

h1, h2, h3, h4, h5, p {
	margin-left: 30px;
}

h1, h2, h3, h4, .backlink {
	text-transform: uppercase;
	letter-spacing: .09em;
}

h2 {
	padding: 5px 0;
}

h5 {
	text-transform: uppercase;
	margin-bottom: 5px;
}

p {
	line-height: 1.2em;
	margin-bottom: 5px;
}

a {
	color: black;
	text-decoration: none;

	&:hover {
		text-decoration: underline;
	}
}


// content

.page-header {
	margin-top: 15px;
}

.page-body {
	padding-top: 5px;
	
	+ .prefooter {
		text-align: center;
		margin-bottom: 250px;
	}
}

.set {
		box-sizing: border-box;
		background: #fff;
		
		.set-head {
			border-top: 1px solid rgb(128, 128, 128);
			border-bottom: 1px solid rgb(128, 128, 128);;
			border-right: 1px solid rgb(128, 128, 128);
			background-color: #fff;
		
			min-height: 70px;
			margin-bottom: 70px;
			padding-top: 10px;

			position: -webkit-sticky;
			position: -moz-sticky;
			position: sticky;
			top: 0;

			h3 {
				margin-bottom: 10px;
			}
		}
		
		&:last-child {
			.set-head {
				border-right: none;
			}
		}

		hr {
			margin-bottom: 15px;
		}
	
		.project-head {
			position: -webkit-sticky;
			position: -moz-sticky;
			position: sticky;
			top: 0;
			margin-bottom: 250px;
			
			height: 0;
			overflow: visible;
						
			p, h5 {
				width: 15%;
			}
		}
		
		.project {
			cursor: pointer;
		}
		
		h1 + .project .project-head hr,
		.project:first-child .project-head hr {
			opacity: 0;
		}
		
		figure {
			min-height: 160px;
			display: flex;
			flex-direction: column;
			justify-content: center;
			margin-bottom: 120px;
				
			img {	
				display: block;
				margin: 0 auto;
			
				cursor: pointer;
			
				margin: 0 auto;
				
				width: 35%;
				height: auto;
				
				&.landscape {
					width: 55%;
				}
			}
		}
	}
	
.zoomedSet {
	img {
		margin-bottom: 250px;
	}
	
	.project:first-child > .project-head {
		margin-bottom: 15vh;
	}
}

.faderOverlay {
	position: fixed;
	height: 100vh;
	width: 100vw;
	
	z-index: 10;
	
	top: 0;
	left: 0;
	
	background: #fff;
}

.mobile-page-body, .mobile-page-header {
	display: none;
}

.caret-left, .caret-right {
	display: none;
}

// profile

.profile {
	padding-top: 30px;
	height: 100vh;
		
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	justify-content: space-between;
	
	h4 {
		margin-bottom: 5px;
	}
	
	> div { 
		width: 50%;
		display: flex;
		
		&.join {
			display: block;
			
			> div {
				display: flex;
				margin-bottom: 30px;
				
				&:last-child {
					margin-bottom: 10px;
				
					p {
						margin-bottom: 0;
					}
				}
				
				> * {
					flex: 0 1 50%;
					min-width: 320px;
				}
			}
		}
		
		> * {
			flex: 0 1 50%;
			min-width: 320px;
		}
		
		p {
			margin-bottom: 30px;
			
			&:last-child {
				margin-bottom: 10px;
			}
		}
		
		img {
			width: 100%;
			height: auto;
			padding: calc(1em + 8px) 0 0 30px;
		}
	}
	
	@media 
	screen and (max-width: 800px),
	screen and (max-height: 625px) {			
		height: auto;
		justify-content: flex-start;
		
		padding-top: 10px;
		max-width: 85vw;
			
		> div {
			flex-direction: column;
			width: auto;
			margin-bottom: 30px;
				
			p, h4 {
				margin-left: 10px;
			}
				
			&.join {
				> div {
					
					> * {
						min-width: 0;
					}
						
					&:last-child {
						margin-bottom: 10px;
						
						p {
							margin-bottom: 0;
							
							&:last-child {
								margin-left: 10px;
							}
						}
					}
					
				}	
			}		
				
			> * {
				min-width: 0;
			}
				
			img {
				padding: 0 0 0 10px;
				margin-bottom: 10px;
			}
		}
	}
	
	@media only screen and (max-width : 540px) {		
		max-width: calc(100vw - 10px);
		
		.join > div {
			flex-direction: column;
			
			> * {
				margin-bottom: 0;
			}
			
			&:first-child > div:first-child {
				margin-bottom: 30px;
			}
		}
	}
	
	@media screen and (max-height: 625px) {	
		max-width: 60vw;
	}
	
}


// special selection

.customSelection {
	h5,
	p {
		width: 15%;
		text-transform: none;
	}
	
	figure {
		max-width: 75vw;
		margin: 0 auto 35vh;
		
		&.portrait,
		&.square {
			max-width: 40vw;
		}
		
		&:first-of-type {
			margin-top: 25vh;
		}
		
		img {
			width: 100%;
			height: auto;
		}
	}
}


// media queries

@media only screen 
	and (max-device-width : 900px) {
		
		body,
		h1, h2, h3, h4 {
			font-size: 10pt;
		}

		.page-header {
			display: none;
		}
		
		.set {
			display: none;
		}
		
		body.single {
			.set {
				display: block;
			}
		}

		h1, h2, h3, h4, h5, p {
			margin-left: 7.5vw;
		}
		
		h1, h2 {
			padding: 0;
			margin-bottom: 15px;
		}
		
		h4 {
			margin-bottom: 5px;
		}

		.mobile-page-header {
			display: block;
			margin-bottom: 30px;
			margin-top: 15px;
			
			> div:not(:first-child),
			> div > div:first-child {
				margin-bottom: 30px;
			}
			
			img {
				width: 100%;
				padding: 0 30px;
			}
		}
		
		.infoButton {
			position: absolute;
			top: 15px;
			right: 7.5vw;
			font-size: .9em;
		}

		span {
			-webkit-tap-highlight-color: rgba(0,0,0,0);
		}
		
		.flex {
			display: block;
		}

		.set {
			width: 100vw;

			.set-head {
				display: flex;
				border-right: 0;
			
				min-height: 60px;
				margin-bottom: 100px;
				padding-top: 25px;
				
				.caret {
					display: block;
					width: 21vw;
					font-size: 2em;
					line-height: .35em;
		
					cursor: pointer;

					&.caret-left {
						padding-left: 7.5vw;
					}
					
					&.caret-right {
						position: absolute;
						right: 0;
						text-align: end;
						padding-right: 7.5vw;
						height: 45px;
					}
				}
						
				h3 {
					margin: 0;
				}
			}

			img.landscape, img.portrait, img.square {
				display: block;
		
				cursor: pointer;
		
				width: 85%;
			}

			img.portrait, img.square {
				height: auto;
			}

			.project:nth-child(2) {
				.project-head {
					hr {
						display: none;
					}
				}
			}

			hr {
				margin-bottom: 30px;
			}
			
			.project-head {
				opacity: 1;
				margin-bottom: 30px;
				height: auto;
				overflow: unset;
				position: relative;
				top: 0;

				p, h5 {
					width: 80%;
					margin-bottom: 1em;
				}
				
				&.featured-head h5 {
					display: none;
				}
			}
		}		
}

